--- a/src/public/css/products-detail.css
+++ b/src/public/css/products-detail.css
@@ -80,10 +80,58 @@
 }
 
 .season-options label {
+    position: relative;
+    padding-left: 30px;
+    cursor: pointer;
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.custom-checkbox {
+    position: absolute;
+    opacity: 0;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
+
+.custom-checkbox+span {
+    display: inline-block;
+}
+
+label:has(.custom-checkbox:not(:checked))::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 20px;
+    height: 20px;
+    border: 2px solid black;
+    border-radius: 50%;
+    background: white;
+}
+
+label:has(.custom-checkbox:checked)::before {
+    content: '✓';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 20px;
+    height: 20px;
+    border: 2px solid black;
+    border-radius: 50%;
+    background: black;
     display: flex;
     align-items: center;
-    gap: 5px;
-    white-space: nowrap;
+    justify-content: center;
+    font-size: 14px;
+    font-weight: bold;
+    color: white;
+}
+
+/* ホバー効果 */
+.custom-checkbox:hover+label::before {
+    border-color: black;
 }
 
 .product-extra {
