--- a/src/public/css/products-detail.css
+++ b/src/public/css/products-detail.css
@@ -85,6 +85,7 @@
     cursor: pointer;
     display: inline-block;
     margin-right: 20px;
+    color: black;
 }
 
 .custom-checkbox {
@@ -97,6 +98,7 @@
 
 .custom-checkbox+span {
     display: inline-block;
+    color: black;
 }
 
 label:has(.custom-checkbox:not(:checked))::before {
@@ -118,45 +120,20 @@ label:has(.custom-checkbox:checked)::before {
     top: 0;
     width: 20px;
     height: 20px;
-    border: 2px solid black;
+    border: 2px solid white;
     border-radius: 50%;
     background: black;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 14px;
-    font-weight: bold;
-    color: white;
-}
-
-/* ホバー効果 */
-.custom-checkbox:hover+label::before {
-    border-color: black;
 }
 
 .product-extra {
     max-width: 800px;
     margin: 30px auto 0;
-}
-
-.file-field {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    margin-bottom: 15px;
-}
-
-.file-input {
-    display: none;
-}
-
-.file-name {
-    font-size: 14px;
-    color: #666;
-    white-space: nowrap;
-    max-width: 200px;
-    overflow: hidden;
-    text-overflow: ellipsis;
 }
 
 .form-group.description {
