--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -14,7 +14,7 @@
     padding: 0;
 }
 
-.section__title h2 {
+.section__title {
     font-size: 28px;
     margin: 0 0 25px 0;
     font-weight: bold;
