--- a/src/public/css/products-register.css
+++ b/src/public/css/products-register.css
@@ -56,7 +56,7 @@ input[type="file"]:focus {
 input:focus,
 textarea:focus {
     outline: none;
-    border-color: #10b981;
+    border-color: #ffa500;
     box-shadow: 0 0 0 3px rgba(16, 185, 129, 0.1);
 }
 
