--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -9,7 +9,7 @@
 }
 
 .header__logo {
-    color: #f5c800;
+    color: #ffa500;
     text-decoration: none;
     font-weight: bold;
     font-size: 24px;
