--- a/src/public/css/products-detail.css
+++ b/src/public/css/products-detail.css
@@ -13,7 +13,7 @@
 }
 
 .breadcrumb .link {
-    color: #007bff;
+    color: #0000ff;
     text-decoration: none;
 }
 
@@ -187,7 +187,7 @@
 }
 
 .btn.primary {
-    background-color: #f5c800;
+    background-color: #ffa500;
 }
 
 .btn.btn-secondary {
@@ -195,7 +195,7 @@
 }
 
 .btn.btn-warning {
-    background-color: #ffc107;
+    background-color: #ffa500;
     color: #212529;
 }
 
@@ -248,7 +248,7 @@
 
 .error-messages .error-message {
     display: block;
-    color: #e53e3e;
+    color: #ff0000;
     font-size: 0.875rem;
     margin-bottom: 2px;
 }
